# Plotting

./: .gitignore  CITATION.cff  LICENSE  README.md  example.py  pyproject.toml
src/myplot/: __init__.py  core.py  style.py
src/myplots/: __init__.py  core.py  style.py
