[build-system]
requires = ["uv_build >= 0.10.10, <0.11.0"]
build-backend = "uv_build"

[project]
name = "myplot"
version = "0.1.0"
description = "Lightweight plotting utilities for consistent well-readable matplotlib figures"
readme = "README.md"
requires-python = ">=3.8"
dynamic = []

authors = [
    {name = "Daniel Isler", email = "mail@daniisler.ch"}
]

license = "MIT"
license-files = ["LICEN[CS]E*"]

keywords = ["Python", "plotting", "scientific"]

classifiers = [
    "Development Status :: 3 - Alpha",
]

dependencies = [
    "matplotlib",
    "numpy"
]

[project.urls]
Repository = "https://github.com/daniisler/myplot"
Homepage = "https://github.com/daniisler/myplot"
Issues = "https://github.com/daniisler/myplot/issues"
